# sim

./: LICENSE.txt  Makefile  README.md  meson.build
include/: settings.h
include/interface/: interface.h
include/objects/: objects.h
include/world/: tile.h  world.h
src/: sim.c
src/interface/: canvas.c  input.c  interface.c
src/objects/: object.c  objects.c
src/world/: map.c  map_creation.c  tile.c
